// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonWithIcon should render icon when icon is provided, and should render to the right when specified 1`] = `
"<WithStyles(ForwardRef(Button)) variant=\\"contained\\">
  Submit
  <Styled(MuiBox) mr={0} ml={1} clone={true}>
    <Memo(ForwardRef(LocationOnIcon)) component={{...}} fontSize={[undefined]} />
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Button))>"
`;

exports[`ButtonWithIcon should render icon when icon is provided, defaulting to the left position 1`] = `
"<WithStyles(ForwardRef(Button)) variant=\\"contained\\">
  <Styled(MuiBox) mr={1} ml={0} clone={true}>
    <Memo(ForwardRef(LocationOnIcon)) component={{...}} fontSize={[undefined]} />
  </Styled(MuiBox)>
  Submit
</WithStyles(ForwardRef(Button))>"
`;

exports[`ButtonWithIcon should render with minimal props 1`] = `
"<WithStyles(ForwardRef(Button)) variant=\\"contained\\">
  Submit
</WithStyles(ForwardRef(Button))>"
`;
